--- a/css/tinymce/content.css
+++ b/css/tinymce/content.css
@@ -118,6 +118,9 @@ html, :root {
     --blades-green-bright-nums: 20, 220, 60;
     --blades-green-nums: 0, 204, 0;
     --blades-green-dark-nums: 0, 122, 0;
+    --blades-cyan-bright-nums: 198, 255, 255;
+    --blades-cyan-nums: 150, 255, 255;
+    --blades-cyan-dark-nums: 42, 85, 85;
     --blades-white-bright: rgba(var(--blades-white-bright-nums), 1);
     --blades-white: rgba(var(--blades-white-nums), 1);
     --blades-grey-bright: rgba(var(--blades-grey-bright-nums), 1);
@@ -134,6 +137,9 @@ html, :root {
     --blades-green-bright: rgba(var(--blades-green-bright-nums), 1);
     --blades-green: rgba(var(--blades-green-nums), 1);
     --blades-green-dark: rgba(var(--blades-green-dark-nums), 1);
+    --blades-cyan-bright: rgba(var(--blades-cyan-bright-nums), 1);
+    --blades-cyan: rgba(var(--blades-cyan-nums), 1);
+    --blades-cyan-dark: rgba(var(--blades-cyan-dark-nums), 1);
     --blades-white-fade: rgba(var(--blades-white-nums), 0.5);
     --blades-white-fade-strong: rgba(var(--blades-white-nums), 0.25);
     --blades-white-bright-fade: rgba(var(--blades-white-bright-nums), 0.5);
@@ -144,8 +150,10 @@ html, :root {
     --blades-black-dark-fade-strong: rgba(var(--blades-black-dark-nums), 0.25);
     --blades-red-dark-fade: rgba(var(--blades-red-dark-nums), 0.5);
     --blades-green-dark-fade: rgba(var(--blades-green-dark-nums), 0.5);
+    --blades-cyan-dark-fade: rgba(var(--blades-cyan-dark-nums), 0.5);
     --blades-red-dark-fade-strong: rgba(var(--blades-red-dark-nums), 0.25);
     --blades-green-dark-fade-strong: rgba(var(--blades-green-dark-nums), 0.25);
+    --blades-cyan-dark-fade-strong: rgba(var(--blades-cyan-dark-nums), 0.25);
     --color-primary: var(--blades-white-nums);
     --color-background: var(--blades-black-nums);
     --color-background-lightest: var(--blades-grey-nums);
@@ -2291,6 +2299,10 @@ html, :root {
     color: var(--blades-red-bright) !important; }
   html .uppercase, :root .uppercase {
     text-transform: uppercase !important; }
+  html .inline-code, :root .inline-code {
+    font-family: var(--font-mono) !important;
+    font-size: smaller;
+    text-transform: uppercase; }
   html .shadowed, :root .shadowed {
     -webkit-box-shadow: none;
     box-shadow: none;
@@ -2389,6 +2401,17 @@ html, :root {
     bottom: 50px;
     z-index: 6;
     pointer-events: none; }
+    html .tooltip > h1, :root .tooltip > h1 {
+      text-align: center;
+      background: transparent;
+      font-family: var(--font-emphasis);
+      text-shadow: 0px 0px 4px var(--blades-black-dark), 0px 0px 4px var(--blades-black-dark), 0px 0px 4px var(--blades-black-dark), 0px 0px 4px var(--blades-black-dark);
+      width: 90%;
+      margin: 0 auto;
+      border-bottom: 2px solid var(--blades-white);
+      margin-bottom: 5px; }
+    html .tooltip > p, :root .tooltip > p {
+      margin: 0; }
     html .tooltip h2, :root .tooltip h2 {
       color: var(--blades-white-bright); }
     html .tooltip.tooltip-left, :root .tooltip.tooltip-left {
@@ -2427,8 +2450,15 @@ html, :root {
       width: 350px;
       min-width: 350px;
       translate: -50% 0% !important; }
-      html .tooltip.tooltip-roll-mod > p, :root .tooltip.tooltip-roll-mod > p {
-        margin: 0; }
+    html .tooltip.tooltip-pos-effect-trade, :root .tooltip.tooltip-pos-effect-trade {
+      width: 330px;
+      max-width: 330px;
+      min-width: 330px;
+      bottom: 5px;
+      left: 0px;
+      font-family: var(--font-default);
+      font-size: 0.875rem;
+      text-transform: none; }
   html .tooltip-scaling-elem, :root .tooltip-scaling-elem {
     display: inline-block; }
 
