--- a/scss/dialog/_dialogs.scss
+++ b/scss/dialog/_dialogs.scss
@@ -84,7 +84,7 @@
 
           .comp.fine-quality {
             .comp-body {
-              .comp-title { color: rgb(150, 255, 255); }
+              .comp-title { color: var(--blades-cyan) }
             }
           }
 
