--- a/templates/components/roll-collab-mod.hbs
+++ b/templates/components/roll-collab-mod.hbs
@@ -1,5 +1,5 @@
 <span class="roll-mod-container">
-  <span class="roll-mod shadowed cat-{{case "lower" cat}} status-{{case "lower" data.status}} {{~#if data.tooltip}} tooltip-trigger{{/if}}{{~#if data.sideString}} roll-mod-sidestring{{/if}}{{~#if data.isAbility}} roll-mod-ability{{/if}}" {{~#if (test "Toggle" "in" data.status)}}
+  <span class="roll-mod shadowed cat-{{case "lower" cat}} status-{{case "lower" data.status}} {{~#if data.tooltip}} tooltip-trigger{{/if}}{{~#if data.sideString}} roll-mod-sidestring{{/if}}{{~#if data.modType}} roll-mod-{{case "lower" data.modType}}{{/if}}" {{~#if (test "Toggle" "in" data.status)}}
     data-action="toggle" data-type="{{type}}" data-cat="{{cat}}" data-name="{{name}}"{{/if}}>{{name}}{{#if data.sideString}}:{{/if}}</span>
   {{#if data.tooltip}}
   <div class="tooltip tooltip-small tooltip-left tooltip-roll-mod">{{{data.tooltip}}}</div>
